# Examples

./: README.md
Heart_Frequency/: CMakeLists.txt  SignalsTest.cpp
Heart_Frequency/Filters/: CMakeLists.txt  Filters.cpp  Filters.hpp  FiltersException.hpp  HeartRatePPGConfig.cmake.in  PrivateFilters.cpp  PrivateFilters.hpp
Registration_Surface_Points/: CMakeLists.txt  LeastSquaresICP.cpp  LeastSquaresICP.hpp  TKA_RegistrationConfig.cmake.in
Segmentation_Human_body/: CMakeLists.txt  segmentation_test.cpp
Segmentation_Human_body/segmentation_dnn/: CMakeLists.txt  ImageInference.cpp  ImageInference.hpp  ImageProcessing.cpp  ImageProcessing.hpp  ImageSize.cpp  ImageSize.hpp  Padding.cpp  Padding.hpp  PrivateData.hpp  SegmentationException.hpp  segmentationDNN.cpp  segmentationDNN.hpp
